--- a/banking_system/public/members.html
+++ b/banking_system/public/members.html
@@ -7,6 +7,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css">
   <link href="stylesheets/style.css" rel="stylesheet">
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
+  <script src="jquery-3.5.1.min.js"></script>
+
+
 </head>
 
 <body>
@@ -22,10 +28,88 @@
   <div class="container">
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
-        <h2>Welcome <span class="member-name"></span></h2>
+        <h4>Welcome <span class="member-name"></span></h4>
       </div>
     </div>
   </div>
+  <div id="center">
+    <h1 id="bank_title">Banking App</h1>
+    <div id="balance_info">
+      <p>Please enter your starting balances below.</p>
+      <form id="balance_form">
+        Checking Balance:<br>
+        <input type="number" name="checking_balance" id="checking_balance" class="enter_balance"><br>
+        Savings Balance:<br>
+        <input type="number" name="savings_balance" id="savings_balance" class="enter_balance"><br><br>
+        <input type="button" value="Submit" id="submit_balance" form="balance_form">
+      </form>
+    </div>
+  </div>
+  <div class="row">
+    <div class="bank" id="checking_info">
+      <h2>Checking Account</h2>
+      <p id="current_checking_balance">Current Balance: </p>
+      <div id="enter_transaction">
+        <form id="transaction_form">
+          Amount:<br>
+          <input type="number" name="transaction_amount" id="transaction_amount" class="transaction"><br>
+          <div id="desc">
+            Description:<br>
+            <input type="text" name="transaction_description" id="transaction_description" class="transaction"><br>
+          </div>
+          <select name="transaction_type" id="transaction_type" class="trans_type">
+            <option value="Debit">Debit</option>
+            <option value="Deposit">Deposit</option>
+            <option value="Withdraw">Withdraw</option>
+            <option value="Transfer">Transfer</option>
+          </select>
+          <input type="button" value="Submit" id="submit_transaction" form="transaction_form" class="submit_trans">
+        </form>
+        <br>
+      </div>
+      <div class="table-center">
+        <table class="center-table" id="trans_table">
+          <tr class="top_of_table">
+            <th>Transaction Type</th>
+            <th>Descripton</th>
+            <th>Amount</th>
+            <th>Balance</th>
+          </tr>
+        </table>
+      </div>
+    </div>
+    <div class="bank" id="savings_info">
+      <h2>Savings Account</h2>
+      <p id="current_savings_balance">Current Balance: </p>
+      <div id="enter_transaction_savings">
+        <form id="transaction_form_savings">
+          Amount:<br>
+          <input type="number" name="transaction_amount" id="transaction_amount_savings" class="transaction"><br>
+          <select name="transaction_type" id="transaction_type_savings" class="trans_type">
+            <option value="Deposit">Deposit</option>
+            <option value="Withdraw">Withdraw</option>
+            <option value="Transfer">Transfer</option>
+          </select>
+          <input type="button" value="Submit" id="submit_transaction_savings" form="transaction_form"
+            class="submit_trans">
+        </form>
+        <br>
+      </div>
+      <div class="table-center">
+        <table class="center-table" id="trans_table_savings">
+          <tr class="top_of_table">
+            <th>Transaction Type</th>
+            <th>Descripton</th>
+            <th>Amount</th>
+            <th>Balance</th>
+          </tr>
+        </table>
+      </div>
+    </div>
+  </div>
+
+
+
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/members.js"></script>
