--- a/banking_system/public/members.html
+++ b/banking_system/public/members.html
@@ -16,7 +16,17 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-default">
+  <nav class="newNav">
+    <label class="logo">Banking</label>
+
+    <ul class="navUl">
+
+      <li><a href="/logout">Logout</a></li>
+      <li><a href="/members">Home</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+  </nav>
+  <!-- <nav class="navbar navbar-default">
     <div class="container-fluid">
       <div class="navbar-header">
         <a class="navbar-brand" href="/logout">
@@ -24,7 +34,7 @@
         </a>
       </div>
     </div>
-  </nav>
+  </nav> -->
   <div class="container">
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
