--- a/banking_system/public/members.html
+++ b/banking_system/public/members.html
@@ -20,10 +20,9 @@
     <label class="logo">Banking</label>
 
     <ul class="navUl">
-
-      <li><a href="/logout">Logout</a></li>
       <li><a href="/members">Home</a></li>
-      <li><a href="#">Contact</a></li>
+      <li><a href="/logout">Logout</a></li>
+
     </ul>
   </nav>
   <!-- <nav class="navbar navbar-default">
@@ -38,7 +37,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
-        <h4>Welcome <span class="member-name"></span></h4>
+        <h4 class="userName">Welcome <span class="member-name"></span></h4>
       </div>
     </div>
   </div>
